--- a/notebooks/NB1_data_gathering.ipynb
+++ b/notebooks/NB1_data_gathering.ipynb
@@ -8,6 +8,14 @@
   {
    "cells": [
     {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Just a test\n"
+     ]
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
