--- a/notebooks/NB1_data_gathering.ipynb
+++ b/notebooks/NB1_data_gathering.ipynb
@@ -27,9 +27,10 @@
       "\n",
       "List the team members contributing to this notebook, along with their responsabilities:\n",
       "\n",
-      "* team member 1 **name**: team member 1 **responsabilities**\n",
-      "* team member 2 **name**: team member 2 **responsabilities**\n",
-      "* etc.\n",
+      "* team member 1 **Shorhon**: team member 1 **responsibilities**\n",
+      "* team member 2 **Sarah**: team member 2 **responsibilities**\n",
+      "* team member 3 **Patrick**: team member 3 **responsibilities**\n",
+      "* team member 4 **Doh**: team member 4 **responsibilities**\n",
       "\n",
       "I advise you to work at least in pairs for each project notebook, as you did for the homework assignments. Of course, all team members may participate to each notebook. "
      ]
@@ -64,7 +65,7 @@
       "* display samples of your data files (e.g. for a csv files, use data frames and the <code>head</code> method)\n",
       "\n",
       "\n",
-      "*  Write **scripts** into the <code>./script</code> directory using the he **magic command** \n",
+      "*  Write **scripts** into the <code>./script</code> directory using the **magic command** \n",
       "\n",
       "    %%file ./script/file_name\n",
       "    \n",
@@ -124,21 +125,23 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "visualizations\n",
-        "script\n",
         "README.md\n",
         "NB4_project_report.ipynb\n",
         "NB3_data_analysis.ipynb\n",
         "NB2_data_cleaning.ipynb\n",
-        "NB1_data_gathering.ipynb\n",
-        "data\n"
+        "NB1_data_gathering.ipynb\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "mkdir: cannot create directory \u2018../data\u2019: File exists\n"
+        "mkdir: cannot create directory \u2018../script\u2019: File exists\n",
+        "mkdir: cannot create directory \u2018../data\u2019: File exists\n",
+        "mkdir: cannot create directory \u2018../data/raw\u2019: File exists\n",
+        "mkdir: cannot create directory \u2018../data/cleaned\u2019: File exists\n",
+        "mkdir: cannot create directory \u2018../data/simulated\u2019: File exists\n",
+        "mkdir: cannot create directory \u2018../visualizations\u2019: File exists\n"
        ]
       }
      ],
@@ -168,7 +171,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -185,9 +188,9 @@
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "%%R\n",
       "\n",
       "library(XML)\n",
@@ -201,33 +204,19 @@
       "\n",
       "plant_nodes = xmlChildren(root_node)\n",
       "print(plant_nodes[[1]])"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%R\n",
+      "\n",
+      "library(XML)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "display_data",
-       "text": [
-        "\n",
-        "Attaching package: \u2018XML\u2019\n",
-        "\n",
-        "The following object(s) are masked from \u2018package:tools\u2019:\n",
-        "\n",
-        "    toHTML\n",
-        "\n",
-        "<PLANT>\n",
-        "  <COMMON>Bloodroot</COMMON>\n",
-        "  <BOTANICAL>Sanguinaria canadensis</BOTANICAL>\n",
-        "  <ZONE>4</ZONE>\n",
-        "  <LIGHT>Mostly Shady</LIGHT>\n",
-        "  <PRICE>$2.44</PRICE>\n",
-        "  <AVAILABILITY>031599</AVAILABILITY>\n",
-        "</PLANT> \n"
-       ]
-      }
-     ],
-     "prompt_number": 6
+     "outputs": []
     },
     {
      "cell_type": "heading",
