--- a/notebooks/NB1_data_gathering.ipynb
+++ b/notebooks/NB1_data_gathering.ipynb
@@ -256,6 +256,21 @@
      "prompt_number": 7
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%R\n",
+      "\n",
+      "data = data.frame(raw_data[2:111,2:51])\n",
+      "x = raw_data[,2:51]\n",
+      "colnames = unname(sappy(x[1,], as.character))\n",
+      "cat(column_names)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
